fixed bad alignment of icon descriptions

--- a/styles/components/homepage/workflow-graphic.scss
+++ b/styles/components/homepage/workflow-graphic.scss
@@ -58,11 +58,17 @@
 
       > .description {
         position: absolute;
+        left: 50%;
+        width: 100%;
+        max-width: 175px;
+        transform: translate(-50%, 0);
+
         color: $medium-pink;
         font-family: $font-family-1;
         font-size: $font-size-xx-regular;
-        letter-spacing: -1.3;
+        letter-spacing: -1.3px;
         line-height: 1;
+
 
         &.-top {
           bottom: 72px;
